--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.16.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "request-json": "^0.6.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
